2 fixes in branch results of security analysis:  - q1 was not correctly unscaled from per-unit  - current unscaling was bugged, using static variables for nominal voltages
Signed-off-by: Sylvain Leclerc <sylvain.leclerc@rte-france.com>